// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Input Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span is-hide"
    >
      Input
    </span>
    <input
      aria-label="Input"
      className="input"
      id="#1"
      onChange={[Function]}
      placeholder="testing"
      type="text"
      value="testing"
    />
  </label>
</div>
`;

exports[`Storyshots Atoms/Input Inline 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span is-hide"
    >
      Input
    </span>
    <input
      aria-label="Input"
      className="input is-inline"
      id="#4"
      onChange={[Function]}
      placeholder="testing"
      type="text"
      value="testing"
    />
  </label>
</div>
`;

exports[`Storyshots Atoms/Input Is Not Hide Label 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span"
    >
      Input
    </span>
    <input
      aria-label="Input"
      className="input"
      id="#5"
      onChange={[Function]}
      placeholder="testing"
      type="text"
      value="testing"
    />
  </label>
</div>
`;

exports[`Storyshots Atoms/Input Types 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span is-hide"
    >
      Input
    </span>
    <input
      aria-label="Input"
      className="input"
      id="#3"
      onChange={[Function]}
      placeholder="testing"
      type="text"
      value="testing"
    />
  </label>
</div>
`;

exports[`Storyshots Atoms/Input Value 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span is-hide"
    >
      Input
    </span>
    <input
      aria-label="Input"
      className="input"
      id="#2"
      onChange={[Function]}
      placeholder="testing"
      type="text"
      value="testing"
    />
  </label>
</div>
`;
